# stylus-hook

./: .gitmodules  README.md  deploy.bash  first-launch.bash  install.bash  launch.bash
airdrop-stylus-proxy/: README.md
airdrop-stylus-proxy/examples/: counter.rs
airdrop-stylus-proxy/scripts/: deploy.bash
airdrop-stylus-proxy/src/: lib.rs  main.rs
create-proxy/: package-lock.json
create-proxy/scripts/: deploy.sh
create2/: .env  Cargo.toml  README.md
create2/examples/: counter.rs  stylus_hook.wasm
create2/src/: lib.rs  main.rs
docs/: index.html  style.css
hook/: Cargo.toml
hook-proxy/examples/: counter.rs
hook-proxy/src/: lib.rs
hook/examples/: counter.rs
hook/src/: basehook.rs  deploy.rs  hook.rs  lib.rs
hook/src/hook/: Cargo.toml  lib.rs  main.rs
nitro-testnode-stylus/blockscout/: nitro.env
order-hook/src/: lib.rs  main.rs
order-hooks/: Cargo.toml
order-hooks/src/: lib.rs
test/: README.md  counter.ts  package-lock.json  package.json  tsconfig.json
test/src/: airdrop.ts  create.ts  hook.ts  liquidity.ts  stylus_hook.wasm.br  swap.ts
test/typechain/: AirdropHookProxy.ts  AirdropToken.ts  CounterProxy.ts  CustomSwapRouter.ts  Deployers.ts  ERC6909.ts  ERC6909Claims.ts  IAirdropHook.ts  ICounter.ts  IERC1155Receiver.ts  IERC20Airdrop.ts  IERC6909Claims.ts  IProtocolFeeController.ts  IProtocolFees.ts  LimitOrder.ts  NoDelegateCall.ts  Owned.ts  Pool.ts  PoolClaimsTest.ts  PoolDonateTest.ts  Test.ts  (+8 more)
uniswap/: foundry.toml  package-lock.json  package.json
v4-template/: .gitmodules  README.md  foundry.toml
website/: index.html
(+961 files in other folders)
